--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <main>
-        <div class="white-turn-text mobile">
+        <div  class="white-turn-text mobile">
             White's Turn
         </div>
         <table>
@@ -76,7 +76,7 @@
                 <td class="lightsquare"></td><td></td>
                 <td class="lightsquare"></td><td></td>
                 <td class="lightsquare"></td><td></td>
-                <td class="notations_ver">6</td>
+                <th class="notations_ver">6</td>
             </tr>
             <tr>
                 <!-- 5 -->
