All bug fixed, finishing touch remains

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </table>
         <div class="desktop">
         <div class="white-turn-text">White's Turn</div>
-        <p id="divider">|</p>
+        <div id="divider">|</div>
         <div class="black-turn-text">Black's Turn</div>
     </div>
     <div class="black-turn-text mobile">
