--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <main>
         <div  class="white-turn-text mobile">
-            White's Turn
+            changed temporary
         </div>
         <table>
             <tr>
