--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <!-- 10 -->
                 <th class="notations_ver">10</th>
                 <td class="lightsquare"></td><td></td>
-                <td class="lightsquare"></td><td><div class="black-piece" id="1">♛</div></td>
+                <td class="lightsquare"></td><td><span class="black-piece" id="1">♛</span></td>
                 <td class="lightsquare"></td><td></td>
-                <td class="lightsquare"><div class="black-piece" id="2">♛</div> </td><td></td>
+                <td class="lightsquare"><span class="black-piece" id="2">♛</span> </td><td></td>
                 <td class="lightsquare"></td><td></td>
                 <th class="notations_ver">10</th>
             </tr>
